--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -30,9 +30,9 @@
                       Im Team befinden sich <strong>3</strong> Lehrer,
                       <strong>5</strong> Schüler und <strong>1</strong> Experte.
                     </p>
-                    <button type="button" class="btn btn-secondary btn-close">
+                    <a href="/teams/{{_id}}/members" class="btn btn-add btn-secondary">
                         Details
-                    </button>
+                    </a>
                 </div>
             </div>
 
