--- a/views/files/forms/form-new-file.hbs
+++ b/views/files/forms/form-new-file.hbs
@@ -1,12 +1,8 @@
 <div class="form-group">
     <label>Wählen Sie einen Namen und eine Dateiendung aus:</label>
     <br />
-
-    <label for="file-name">Dateiname:</label>
-    <input id="file-name" type="text" class="form-control" name="new-file-name" placeholder="Name der Datei" required />
-    <br />
-
-    <label for="file-ending">Dateiendung:</label>
+    
+    <label for="file-ending">Dateityp:</label>
     <select class="custom-select mr-sm-2 form-control" id="file-ending">
         <option selected>Format auswählen</option>
         <option value="docx">Word (docx)</option>
@@ -14,6 +10,10 @@
         <option value="pptx">PowerPoint (pptx)</option>
     </select>
     <br />
+    <br />
+
+    <label for="file-name">Dateiname:</label>
+    <input id="file-name" type="text" class="form-control" name="new-file-name" placeholder="Name der Datei" required />
     <br />
 
     {{#userHasPermission "COURSE_EDIT"}}
