--- a/static/styles/administration/school.scss
+++ b/static/styles/administration/school.scss
@@ -9,17 +9,22 @@
   cursor: pointer;
 }
 
-#logo-input {
-  margin-bottom: 1rem;
-  width: 0.1px;
-	height: 0.1px;
-	opacity: 0;
-	overflow: hidden;
-	position: absolute;
-	z-index: -1;
+#preview-logo {
+  display: inline-block;
 }
 
-#preview-logo {
-  display: block;
-  margin-bottom: 1rem;
+#logo-canvas {
+  visibility: hidden;
+}
+
+#logo-input{
+  display: none;
+}
+
+#logo-filename{
+  margin-left: .5rem;
+}
+
+label {
+  margin-bottom: 0rem;
 }
