--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -158,7 +158,7 @@
                                         <li class="list-group-item list-group-item-action">
                                             <span>
                                                 <i class="fa fa-info-circle" aria-hidden="true" style="margin-left:1px;"></i>
-                                                <a href="https://docs.schul-cloud.org/x/jwDT" class="link">Anleitungen</a>
+                                                <a href="https://docs.schul-cloud.org/x/jwDT" target="_blank" class="link">Anleitungen</a>
                                             </span>
                                         </li>
                                         <li class="list-group-item list-group-item-action">
