--- a/views/lib/components/modal-form.hbs
+++ b/views/lib/components/modal-form.hbs
@@ -1,6 +1,6 @@
 {{#extend "lib/components/modal"}}
     {{#content "body"}}
-        <form class="modal-form" method="post" action="{{action}}" {{#if enctype}}enctype="{{enctype}}"{{/if}}>
+        <form class="modal-form" method="{{#if method}}{{method}}{{else}}post{{/if}}" action="{{action}}" {{#if enctype}}enctype="{{enctype}}"{{/if}}>
             {{#if method}}
                 <input type="hidden" name="_method" data-force-value="true" value="{{method}}" />
             {{/if}}
