--- a/views/lib/forms/form-features.hbs
+++ b/views/lib/forms/form-features.hbs
@@ -1,6 +1,6 @@
 <div class="form-group">
 <div style="text-align: center">
-    <img src="https://media.giphy.com/media/3oz8xBkRsgPTnbK1GM/giphy.gif" style="width: 50%; height: auto"/>
+    <img src="/images/surprise.gif" style="width: 50%; height: auto"/>
     <div>
         Es gibt neue Features in der {{theme.short_title}}.
         <br>
