mitglieder löschen geht, form erweitert um custom payload

--- a/views/lib/components/table.hbs
+++ b/views/lib/components/table.hbs
@@ -47,6 +47,9 @@
                             {{else}}
                                 {{#if this.useHTML}}
                                     <td>{{{this.content}}}</td>
+                                {{/if}}
+                                {{#if this.payload}}
+                                    <td style="display: none" data-payload={{{json this.payload}}}></td>
                                 {{else}}
                                     <td>{{this}}</td>
                                 {{/if}}
