team mitglieder ui fertig

--- a/views/teams/forms/form-add-member.hbs
+++ b/views/teams/forms/form-add-member.hbs
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div style="margin-bottom: 4rem" class="form-group">
     <label for="invitation">Füge hier Lehrer und Schüler hinzu:</label>
     <select name="userIds[]" multiple data-placeholder="Personen auswählen">
         {{#each users}}
