topics verfügbar machen, müssen noch angepasst werden

--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -31,7 +31,7 @@
                       <strong>5</strong> Schüler und <strong>1</strong> Experte.
                     </p>
                     <a href="/teams/{{_id}}/members" class="btn btn-add btn-secondary">
-                        Details
+                        Zur Mitglieder Übersicht
                     </a>
                 </div>
             </div>
@@ -53,9 +53,9 @@
                 <div class="col-sm-12">
                     <h4>Themen & Aufgaben</h4>
                     <p>Es gibt derzeit <strong>3</strong> Themen und <strong>5</strong> Aufgaben</p>
-                    <button type="button" class="btn btn-secondary btn-close">
-                        Details
-                    </button>
+                    <a href="/teams/{{_id}}/topics" class="btn btn-add btn-secondary">
+                        Zur Themen Übersicht
+                    </a>
                 </div>
             </div>
 
