[WIP] invite external members

--- a/views/teams/forms/form-invite-external-member.hbs
+++ b/views/teams/forms/form-invite-external-member.hbs
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div class="form-group" data-teamId="{{teamId}}">
     <p>Füge hier externe Mitglieder hinzu:</p>
     <div class="form-group">
         <label for="email">Gebe hier die E-Mail der Person ein, an welche die Einladung verschickt wird.</label>
