team member seite fast finished

--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -31,7 +31,7 @@
                       <strong>5</strong> Schüler und <strong>1</strong> Experte.
                     </p>
                     <a href="/teams/{{_id}}/members" class="btn btn-add btn-secondary">
-                        Zur Mitglieder Übersicht
+                        Zur Mitglieder-Übersicht
                     </a>
                 </div>
             </div>
@@ -54,7 +54,7 @@
                     <h4>Themen & Aufgaben</h4>
                     <p>Es gibt derzeit <strong>3</strong> Themen und <strong>5</strong> Aufgaben</p>
                     <a href="/teams/{{_id}}/topics" class="btn btn-add btn-secondary">
-                        Zur Themen Übersicht
+                        Zur Themen-Übersicht
                     </a>
                 </div>
             </div>
