--- a/views/teams/forms/form-invite-external-member.hbs
+++ b/views/teams/forms/form-invite-external-member.hbs
@@ -6,9 +6,9 @@
     </div>
     <div style="margin-bottom: 6rem" class="form-group padding-bottom">
         <label for="role">Gebe hier ein, welche Rolle das Mitglied erhalten soll.</label>
-        <select placeholder="Rolle angeben"  name="role" id="role">
-            <option value="leader">Leiter</option>
-            <option value="member">Mitglied</option>
+        <select placeholder="Rolle angeben" name="role" id="role">
+            <option selected value="expert">Experte</option>
+            <option value="teamadmin">Team-Admin</option>
         </select>
     </div>
 </div>
