--- a/views/teams/members.hbs
+++ b/views/teams/members.hbs
@@ -9,8 +9,6 @@
     {{#content "scripts" mode="append"}}
         <script src="/scripts/jquery/jquery-ui.min.js" type="text/javascript" defer></script>
         <script src="/scripts/jquery/jquery.ui.touch-punch.js" type="text/javascript" defer></script>
-        <script src="/scripts/courses.js" type="text/javascript" defer></script>
-        <script src="/scripts/topic.js" type="text/javascript" defer></script>
         <script src="/scripts/teamMembers.js" type="text/javascript" defer></script>
     {{/content}}
 
@@ -21,16 +19,30 @@
 
         <section class="section-course">
             <div class="padding-bottom">
-                <button class="btn btn-primary btn-add-member">
+                <p>Füge hier Mitglieder aus deiner Schule zum Team hinzu.</p>
+                <button class="btn btn-primary btn-add-member padding-bottom">
                     Interne Mitglieder hinzufügen
                 </button>
 
+                <p class="padding-top">Lade hier Mitglieder aus anderen Schulen zu deinem Team ein.</p>
                 <button class="btn btn-primary btn-invite-external-member">
                     Externe Mitglieder einladen
                 </button>
             </div>
 
-            <div class="container-fluid padding-top">
+            {{#ifCond (arrayLength bodyInvitations) '>' 0}}
+                <h4 class="padding-top">Ausstehende Einladungen</h4>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-sm-12 no-padding">
+                            {{> "lib/components/table" head=../headInvitations body=../bodyInvitations}}
+                        </div>
+                    </div>
+                </div>
+            {{/ifCond}}
+
+            <h4 class="padding-top">{{arrayLength body}} Mitglieder</h4>
+            <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm-12 no-padding">
                         {{> "lib/components/table" head=head body=body}}
@@ -38,18 +50,15 @@
                 </div>
             </div>
 
-            <h4 class="padding-top">Ausstehende Einladungen</h4>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-sm-12 no-padding">
-                        {{> "lib/components/table" head=headInvitations body=bodyInvitations}}
-                    </div>
-                </div>
-            </div>
-
             {{#embed "lib/components/modal-form" action=addMemberAction method="PATCH" class="add-member-modal"}}
                 {{#content "fields"}}
                     {{> "teams/forms/form-add-member" users=users}}
+                {{/content}}
+            {{/embed}}
+
+            {{#embed "lib/components/modal-form" action=editMemberAction method="PATCH" class="edit-member-modal"}}
+                {{#content "fields"}}
+                    {{> "teams/forms/form-edit-member"}}
                 {{/content}}
             {{/embed}}
 
