--- a/views/teams/members.hbs
+++ b/views/teams/members.hbs
@@ -18,16 +18,22 @@
         {{/if}}
 
         <section class="section-course">
-            <div class="padding-bottom">
-                <p>Füge hier Mitglieder aus deiner Schule zum Team hinzu.</p>
-                <button class="btn btn-primary btn-add-member padding-bottom">
-                    Interne Mitglieder hinzufügen
-                </button>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <p>Füge hier Lehrer und Schüler aus deiner Schule zum Team hinzu.</p>
+                        <button class="btn btn-primary btn-add-member padding-bottom">
+                            Interne Mitglieder hinzufügen
+                        </button>
+                    </div>
 
-                <p class="padding-top">Lade hier Mitglieder aus anderen Schulen zu deinem Team ein.</p>
-                <button class="btn btn-primary btn-invite-external-member">
-                    Externe Mitglieder einladen
-                </button>
+                    <div class="col-sm-6">
+                        <p>Lade hier Mitglieder aus anderen Schulen zu deinem Team ein.</p>
+                        <button class="btn btn-primary btn-invite-external-member">
+                            Externe Mitglieder einladen
+                        </button>
+                    </div>
+                </div>
             </div>
 
             {{#ifCond (arrayLength bodyInvitations) '>' 0}}
