--- a/views/teams/forms/form-invite-external-member.hbs
+++ b/views/teams/forms/form-invite-external-member.hbs
@@ -7,8 +7,9 @@
     <div style="margin-bottom: 6rem" class="form-group padding-bottom">
         <label for="role">Gebe hier ein, welche Rolle das Mitglied erhalten soll.</label>
         <select placeholder="Rolle angeben"  name="role" id="role">
-            <option value="leader">Leiter</option>
-            <option value="member">Mitglied</option>
+            <option value="teamadministrator">Leiter</option>
+            <option value="teamexpert">Experte</option>
+            <option value="teammember">Mitglied</option>
         </select>
     </div>
 </div>
