--- a/views/homework/edit.hbs
+++ b/views/homework/edit.hbs
@@ -94,7 +94,7 @@
 
                     <div class="form-group">
                         <label>Titel</label>
-                        <input class="form-control" name="name" type="text" placeholder="Titel" required value="{{assignment.name}}"/>
+                        <input class="form-control" name="name" type="text" placeholder="Titel" required value="{{{assignment.name}}}"/>
                     </div>
 
                     <div class="row">
