--- a/views/homework/components/overview_card_template.hbs
+++ b/views/homework/components/overview_card_template.hbs
@@ -80,11 +80,11 @@
                        target="_blank"
                        data-method="{{this.method}}"
                        data-name="{{../../name}}"
-                       title="Die Aufgabe: '{{../../name}}' {{this.title}}.">
+                       title="Die Aufgabe: '{{{ ../../name}}}' {{this.title}}.">
                         <i class="fa fa-{{this.icon}}"></i>
                     </a>
                 {{else}}
-                    <a class="btn btn-secondary btn-sm {{this.class}}" href="{{this.link}}" title="Die Aufgabe: '{{../../name}}' {{this.title}}">
+                    <a class="btn btn-secondary btn-sm {{this.class}}" href="{{this.link}}" title="Die Aufgabe: '{{{ ../../name}}}' {{this.title}}">
                         <i class="fa fa-{{this.icon}}"></i> {{this.label}}
                     </a>
                 {{/if}}
