--- a/views/topic/edit-topic.hbs
+++ b/views/topic/edit-topic.hbs
@@ -26,7 +26,7 @@
 
                 <div class="form-group">
                     <label>Titel des Themas</label>
-                    <input class="form-control" name="name" type="text" placeholder="z.B. Rechnen mit Primzahlen" value="{{lesson.name}}" required />
+                    <input class="form-control" name="name" type="text" placeholder="z.B. Rechnen mit Primzahlen" value="{{{lesson.name}}}" required />                
                 </div>
 
                 <div class="form-group">
