--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -27,8 +27,12 @@
                 <div class="col-sm-12">
                     <h4>Mitglieder</h4>
                     <p>
-                      Im Team befinden sich <strong>3</strong> Lehrer,
-                      <strong>5</strong> Schüler und <strong>1</strong> Experte.
+                      Im Team
+                      {{#ifCond (arrayLength course.userIds) '==' 1}} befindet {{/ifCond}}
+                      {{#ifCond (arrayLength course.userIds) '>' 1}} befinden {{/ifCond}}
+                      sich <strong>{{arrayLength course.userIds}}</strong>
+                      {{#ifCond (arrayLength course.userIds) '==' 1}} Mitglied {{/ifCond}}
+                      {{#ifCond (arrayLength course.userIds) '>' 1}} Mitglieder {{/ifCond}}
                     </p>
                     <a href="/teams/{{_id}}/members" class="btn btn-add btn-secondary">
                         Zur Mitglieder-Übersicht
